<resources>
    <string name="app_name">Easy Reminder</string>
    <string name="hello_world">Welcome on Easy Reminder!</string>
    <string name="action_settings">Settings</string>
    <string name="action_new_user">New user</string>
    <string name="action_login">Connect</string>
    <string name="action_logout">Disconnect</string>
    <string name="login_user">User name : </string>
    <string name="login_password">Password : </string>
    <string name="login_submit">Submit</string>
    <string name="newUser_repassword">Retape Password : </string>
    <string name="newUser_user">Your user name : </string>
    <string name="newUser_password">Your Password : </string>
    <string name="newUser_submit">Create user</string>
    <string name="title_activity_new_user">New User</string>
    <string name="title_activity_new_user_created">NewUserCreated</string>
    <string name="title_activity_login">Tasks List</string>
    <string name="title_activity_settings">Settings</string>
    <string name="Button_NewUser">New User</string>
    <string name="Firstname">Firstname :</string>
    <string name="Lastname">Lastname :</string>
    <string name="Email_address">eMail Addres :</string>
    <string name="ButtonSaveSettings">Save settings</string>
    <string name="newTask">New Task</string>
    <string name="TaskName">Name of the task</string>
    <string name="TaskDescription">Description of the task</string>
    <string name="untilDate">Limite Date :</string>
    <string name="action_add_task">Add a task</string>
    <string name="cancelTask">Cancel</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="welcome">Welcome </string>
    <string name="wrongPassword">Wrong password for user : </string>
    <string name="user">User </string>
    <string name="doentExist">does not exist</string>
    <string name="retapePassword">Please retape your password</string>
    <string name="textTask">Description of the task</string>
    <string name="dateTask">yyyy-MM-dd HH:mm</string>
    <string name="title_activity_task_detail">TaskDetail</string>
    <string name="action_modify">Modify</string>
    <string name="action_delete">Delete</string>
    <string name="action_cancel">Cancel</string>>
    <string name="task_done">Done ?</string>>
    <string name="msg_select_color">Choose a color : </string>
    <string name="choose_color">Choose color</string>

</resources>
