<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="fr.free.riquet.jeancharles.easyreminder.TaskDetail">

    <item
        android:id="@+id/action_modify"
        android:icon="@android:drawable/ic_menu_edit"
        android:orderInCategory="100"
        android:title="@string/action_modify"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_cancel"
        android:icon="@android:drawable/ic_menu_revert"
        android:orderInCategory="200"
        android:title="@string/action_cancel"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:orderInCategory="300"
        android:title="@string/action_delete"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="400"
        android:title="@string/action_logout"
        app:showAsAction="never" />
</menu>
