<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="fr.free.riquet.jeancharles.easyreminder.TaskDetail"
    tools:showIn="@layout/activity_task_detail">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                android:id="@+id/editTextTaskName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView13"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/abc_action_bar_content_inset_material"
                android:hint="@string/TaskName"/>
            <EditText
                android:id="@+id/editTextTaskDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView14"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/abc_action_bar_content_inset_material"
                android:hint="@string/TaskDescription"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_done"
                android:id="@+id/checkBoxTaskDetail"
                android:textSize="@dimen/abc_action_bar_content_inset_material"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:checked="false" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/checkBox"
                android:text="@string/msg_select_color"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="@dimen/abc_action_bar_content_inset_material" />

            <uz.shift.colorpicker.LineColorPicker
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/picker"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:orientation="horizontal"/>

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/editTextTaskDescription"
                android:text="@string/untilDate"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="@dimen/abc_action_bar_content_inset_material" />

            <DatePicker
                android:id="@+id/datePickerTask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:calendarViewShown="false"
                android:scaleX="0.8"
                android:scaleY="0.8"/>

            <TimePicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/timePickerTask"
                android:layout_gravity="center_horizontal"
                android:scaleX="0.8"
                android:scaleY="0.8"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
